[package]
name = "xntp"
version = "0.1.2"
edition = "2021"
exclude = ["/ci/*"]
description = "A ntp client lib for Rust"
homepage = "https://github.com/XAnything/xntp"
readme = "README.md"
keywords = [
    "ntp",
    "client",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/XAnything/xntp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.23"